<resources>
    <string name="app_name">仿wechat6.0</string>

    <string name="action_search">查找</string>
    <string name="action_add">添加</string>

    <string name="menu_group_chat">聊天</string>
    <string name="menu_group_feedback">反馈</string>
    <string name="menu_group_add_friend">添加朋友</string>
    <string name="menu_group_scan">扫一扫</string>

    <string name="tab_chat">微信</string>
    <string name="tab_contact">联系人</string>
    <string name="tab_found">发现</string>
    <string name="tab_me">我</string>

</resources>
