<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sally="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/tab_bg"
        android:orientation="horizontal">

        <com.sally.wechat60.view.ChangeColorView
            android:id="@+id/id_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            sally:my_color="#45c04a"
            sally:my_icon="@drawable/ic_menu_start_conversation"
            sally:my_text="@string/tab_chat"
            sally:my_text_size="12sp"
            android:padding="5dp"/>

        <com.sally.wechat60.view.ChangeColorView
            android:id="@+id/id_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            sally:my_color="#45c04a"
            sally:my_icon="@drawable/ic_menu_friendslist"
            sally:my_text="@string/tab_contact"
            sally:my_text_size="12sp"
            android:padding="5dp"/>

        <com.sally.wechat60.view.ChangeColorView
            android:id="@+id/id_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            sally:my_color="#45c04a"
            sally:my_icon="@drawable/ic_menu_emoticons"
            sally:my_text="@string/tab_found"
            sally:my_text_size="12sp"
            android:padding="5dp"/>

        <com.sally.wechat60.view.ChangeColorView
            android:id="@+id/id_four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            sally:my_color="#45c04a"
            sally:my_icon="@drawable/ic_menu_allfriends"
            sally:my_text="@string/tab_me"
            sally:my_text_size="12sp"
            android:padding="5dp"/>

    </LinearLayout>
</LinearLayout>
